--- a/frontend/src/app/wrapper/Wrapper.css
+++ b/frontend/src/app/wrapper/Wrapper.css
@@ -17,18 +17,21 @@
 }
 
 .Header .logo {
+    flex-shrink: 0;
     padding-left: 40px;
     flex-basis: 25%;
     justify-content: flex-start;
 }
 
-.Header .serch {
-    flex: 0, 1, auto;
+.Header .searchWrapper {
+    flex-shrink: 1;
+    flex-basis: 500px;
 }
 
 .Header .sign {
     display: flex;
     padding-right: 40px;
+    flex-shrink: 0;
     flex-basis: 25%;
     flex-direction: row;
     justify-content: flex-end;
@@ -87,3 +90,29 @@
     margin-right: 4px;
 }
 
+.PlayerBar .progress {
+    position: absolute;
+    left: 0;
+    top: 0;
+	width: 100%;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+.PlayerBar .progress .progressCenter{
+	width: 100%;
+	height: 4px;
+	background-color: #bbbbbb;
+}
+
+.PlayerBar .progress .progressCenter:hover{
+	height: 6px;
+	cursor: pointer;
+}
+
+.PlayerBar .progress .progressBar{
+	width: 0px;
+	height: 6px;
+	background-color: #0f0f0f;
+}
