added combination list

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,3 +36,25 @@ textarea {
 select {
   border-width: 1px;
 }
+
+.scroll-simple::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+/* Track */
+.scroll-simple::-webkit-scrollbar-track {
+  background: gainsboro;
+  border-radius: 3px;
+}
+
+/* Handle */
+.scroll-simple::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 3px;
+}
+
+/* Handle on hover */
+.scroll-simple::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
