--- a/frontend/src/app/wrapper/Wrapper.css
+++ b/frontend/src/app/wrapper/Wrapper.css
@@ -58,7 +58,7 @@
 
 .PlayerBar {
     display: flex;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     background-color:#AAAAAA;
