connected searchResult to backend

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -64,5 +64,5 @@ select {
 }
 
 .small-button {
-  @apply py-1 px-2 justify-center border-transparent rounded-lg text-sm font-medium whitespace-nowrap text-white bg-blue-800 hover:bg-blue-900
+  @apply py-1 px-2 justify-center border-transparent rounded-lg text-sm font-medium whitespace-nowrap text-white bg-blue-800 hover:bg-blue-900;
 }
