--- a/frontend/src/app/components/Album/Album.css
+++ b/frontend/src/app/components/Album/Album.css
@@ -1,10 +1,10 @@
-img.AlbumImage{
-    animation: rotate_image 10s linear infinite;
-    transform-origin: 50% 50%;
+.rotate {
+  animation: rotate_image 10s linear infinite;
+  transform-origin: 50% 50%;
 }
- 
-@keyframes rotate_image{
-	100% {
-    	transform: rotate(360deg);
-    }
+
+@keyframes rotate_image {
+  100% {
+    transform: rotate(360deg);
+  }
 }
