--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,16 @@ html {
   width: 100%;
 }
 
+#root {
+  height: 100%;
+  width: 100%;
+}
+
+.app {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   height: 100%;
   width: 100%;
